--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -58,15 +58,15 @@
                 #login-heading {
                     text-align: left;
                     p {
-                        font-size: 1.2em;
+                        font-size: 1.5em;
                         font-weight: 700;
                         line-height: 1.3em;
                     }
 
                     #text {
                         font-weight: 400;
-                        font-size: 0.9em;
-                        line-height: 1em;
+                        font-size: 1em;
+                        line-height: 1.1em;
                         color: #1A1A1A;
                         border: #1A1A1A soild;
                     }
@@ -86,8 +86,8 @@
                 #name,
                 #pass {
                     font-weight: 400;
-                    font-size: 0.9em;
-                    line-height: 1em;
+                    font-size: 1em;
+                    line-height: 1.1em;
                     color: #1A1A1A;
                     padding-bottom: 0.4em;
                 }
@@ -102,10 +102,10 @@
 
                 button {
                     font-weight: 500;
-                    font-size: 0.8em;
+                    font-size: 1emem;
                     line-height: 1.1em;
                     width: 8em;
-                    height: 2em;
+                    height: 2.4em;
                     border: 0.0625em solid #949494;
                     border-radius: 0.0625em 0.0625em 0 0;
                     box-sizing: border-box;
@@ -127,8 +127,8 @@
 
                 label {
                     font-weight: 400;
-                    font-size: 0.8em;
-                    line-height: 1em;
+                    font-size: 1em;
+                    line-height: 1.1em;
                     color: #1A1A1A;
                 }
 
