--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -24,12 +24,12 @@
                 <div id="form-container">
                     <div class="form-group">
                         <div id="name">Username</div>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="usernameReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="userName=($event)"></app-input>
                     </div>
 
                     <div class="form-group">
                         <div id="pass">Password</div>
-                        <app-input [ipConfig]="ipConfig2" (outputEmit)="pwdReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="password= ($event)"></app-input>
                     </div>
                 </div>
                 <div id="login-btn">
