--- a/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.html
@@ -16,24 +16,253 @@
                 </div>
                 <div class="search-filter">
                     <div class="left">
-                      <div id="sort-by">
-                        Add medical record/ prescription
-                      </div>
+                        <div id="sort-by">
+                            Add medical record/ prescription
+                        </div>
                     </div>
                     <div class="right"></div>
                 </div>
 
                 <div class="outline">
-                    <div class="add-record-form">
-                        <div>a</div>
-                        <div>s</div>
-                        <div>d</div>
-                        <div>f</div>
-                        <div>g</div>
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Patient details
+                            </div>
+                        </div>
+                        <div class="right"></div>
                     </div>
-                    <!--current med table-->
-                    <div class="current-med">current med table</div>
-                    <div class="advice">advice</div>
+                    <div class="outline-2">
+                        <div class="form-row">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Patient ID:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>First name:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Last name:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Age:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Gender:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Contact no:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--row 2-->
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Doctor details
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="form-row">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Docotr ID:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Docotr name:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Mode:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Date:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Email:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Contact no:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--form row 3-->
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Visit summary
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="form-row-2">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Facility:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Complaints:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--form row 4-->
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Vitals
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="form-row">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Height:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Weight:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>BP:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Pulse:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--form row 5-->
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Diagnosis
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="form-row-4">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--form row 6-->
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Medications prescribed
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div>
+                                <app-button [btntext]="'Add past record'" [btnConfig]="textBtnConfig2" (click)="''"></app-button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="table-container">
+                            <table>
+                                <tr>
+                                    <th>Medicine</th>
+                                    <th>Dosage</th>
+                                    <th>Action</th>
+                                </tr>
+                                <ng-container *ngFor="let medication of allMedicalDataOfAPatient">
+                                    <tr *ngIf="medication.isCurrent">
+                                        <td>{{medication.medicine}}</td>
+                                        <td>{{medication.dosage}}</td>
+                                        <td>
+                                            <app-button [btntext]="'Remove'" [btnConfig]="textBtnConfig"
+                                                (click)="removeOrDeleteMedication(medication.id)"></app-button>
+                                        </td>
+                                    </tr>
+                                </ng-container>
+        
+                            </table>
+                        </div>
+                    </div>
+                    <div class="sub-form">
+                        <div class="left">
+                            <div id="title">
+                                Advice
+                            </div>
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="outline-2">
+                        <div class="form-row-3">
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Lab tests:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                            <div class="form-cell">
+                                <div class="cell">
+                                    <label>Instrutions:</label>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="submit-form">
+                    <app-button [btntext]="'Submit'" [btnConfig]="textBtnConfig2" (click)="''"></app-button>
                 </div>
             </div>
         </div>
