--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -24,7 +24,8 @@
                 <div id="form-container">
                     <div class="form-group">
                         <div id="name">Username</div>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="userName=($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="userName=($event)" (change)="onUserPatient()"></app-input>
+                    <div *ngIf="!usernameExists" style="color: red;">Username does not exists*</div>
                     </div>
 
                     <div class="form-group">
@@ -33,9 +34,9 @@
                     </div>
                 </div>
                 <div id="login-btn">
-                    <app-button *ngIf="patientActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginPatient()"></app-button>
-                    <app-button *ngIf="doctorActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginDoctor()"></app-button>
-                    <app-button *ngIf="adminActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginAdmin()"></app-button>
+                    <app-button *ngIf="patientActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginPatient()" [disabled]="btndisable"></app-button>
+                    <app-button *ngIf="doctorActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginDoctor()"[disabled]="btndisable"></app-button>
+                    <app-button *ngIf="adminActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginAdmin()"[disabled]="btndisable"></app-button>
                 </div>
             </form>
            
