--- a/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.scss
@@ -1,17 +1,13 @@
 .main-container {
     width: 100vw;
     height: 100vh;
-
-    #nav {
-        height: 7%;
-        width: 100%;
-    }
+    display: table-cell;
 
     .subcontainer {
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 93%;
+        height: 100%;
         background-color: #f5feff;
 
         .flex-item1 {
@@ -25,9 +21,8 @@
 
             .main {
                 margin: 2em;
+                margin-bottom: 0;
                 width: 94%;
-                //height: 90%;
-                margin-bottom: 3em;
                 background-color: #fff;
                 box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
                 border-radius: 0.5em;
