--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -131,8 +131,8 @@
 
             </form>
             <!-- modal popup -->
-            <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
-                <div class="modal-dialog modal-lg" role="document">
+            <!-- <div class="modal"  "> -->
+                <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h4 class="modal-title">Enter OTP</h4>
@@ -148,7 +148,7 @@
                                 </app-button>
                             </div>
 
-                        </div>
+                    
                     </div>
                 </div>
             </div>
