--- a/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
@@ -29,7 +29,7 @@
                 <app-input *ngIf="filterSelector === 'Severity'" [ipConfig]="searchWithSeverityTo" (outputEmit)="onClickSeverityToReceived($event)"></app-input>
               </div>
               <div>
-                <app-button [btntext]="'Search'" [btnConfig]="searchBtnConfig"></app-button>
+                <app-button [btntext]="'Search'" [btnConfig]="searchBtnConfig" (click)="search()"></app-button>
               </div>
             </div>
             <div class="right">
@@ -46,13 +46,13 @@
                 <th>Uploaded by</th>
                 <th>Prescription</th>
               </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+              <tr *ngFor="let pastRecord of allPastRecordsOfAPatient">
+                <td>{{pastRecord.uploadDate}}</td>
+                <td>{{pastRecord.doctorId}}</td>
+                <td>{{pastRecord.doctorName}}</td>
+                <td>{{pastRecord.diagnosis}}</td>
+                <td>{{pastRecord.severity}}</td>
+                <td>{{pastRecord.uploadedBy}}</td>
                 <!-- <td>{{todo.targetDate | date}}</td> -->
                 <td>
                   <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
