--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.scss
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.scss
@@ -28,9 +28,7 @@
                 height: 90%;
                 background-color: #fff;
                 box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-                border-radius: 0.5em; .tabs{
-                    padding: 1em;
-                }
+                border-radius: 0.5em; 
 
                 #text1 {
                     font-family: "Montserrat";
@@ -43,33 +41,19 @@
                     padding-left: 1.25em;
                 }
 
-                .search-filter {
+                #registered-doctors{
                     display: flex;
-                    justify-content: space-between;
-                    margin: 1.25em;
-
-                    .left {
-                        display: flex;
-                        justify-content: space-between;
-
-                        #sort-by {
-                            width: 5.25em;
-                            height: 1.875em;
-                            font-size: 1.25em;
-                            line-height: 1.875em;
-                            letter-spacing: 0.1em;
-                            color: rgba(0, 0, 0, 0.85);
-                            padding-left: 0;
-                            margin-right: 0.625em;
-                        }
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.25em;
+                    line-height: 1.5em;
+                    letter-spacing: 0.1em;
+                    align-items: flex-end;
+                    color: #000000;
+                    padding-top: 1.25em;
+                    padding-left: 1.25em;
                     }
-
-                    .right {
-                        display: flex;
-                        justify-content: space-between;
-                    }
-                }
-
                 .table-container {
                     position: relative;
                     margin: 1.25em;
