doctor routing configured

--- a/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
@@ -33,6 +33,9 @@
               </div>
             </div>
             <div class="right">
+              <div>
+                <app-button [btntext]="'Add prescription'" [btnConfig]="textBtnConfig2" (click)="addMedicalRecord()"></app-button>
+              </div>
             </div>
           </div>
           <div class="table-container">
