--- a/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.scss
+++ b/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.scss
@@ -40,7 +40,7 @@
                     padding-top: 1.25em;
                     padding-left: 1.25em;
                 }
-                #patient-id{
+                #doctor-id{
                     display: flex;
                     justify-content: flex-end;
                     margin-right: 1.25em;
