--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
@@ -13,7 +13,7 @@
             <app-input [ipConfig]="searchDoctorId"></app-input>
             <app-button  [btntext]="'Search'" id="search"[btnConfig]="searchBtnConfig1"></app-button>
             </div>
-          <div id="registered-doctors">Registered Doctors</div>
+          <div id="registered-doctors">To Be Registered Doctors</div>
           <div class="table-container">
             <table>
               <tr>
