--- a/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
+++ b/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
@@ -9,7 +9,7 @@
       <div class="flex-item2">
         <div class="main">
           <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
-          <div id="patient-id">
+          <div id="doctor-id">
             <app-input [ipConfig]="searchDoctorId"></app-input>
             <app-button id="search"[btnConfig]="searchBtnConfig2" [btntext]="'search'"></app-button>
             </div>
