doc dashboard frontend

--- a/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.html
@@ -1,13 +1,12 @@
 <div class="main-container">
     <div id="nav">
-        <app-navbar [button]="false" [name]="'Akansha Gaonkar'"></app-navbar>
+        <app-navbar [button]="false" [name]="'Dr Amit Tiwari'"></app-navbar>
     </div>
     <div class="subcontainer">
         <div class="flex-item1">
             <app-sidebar [menus]="menus"></app-sidebar>
         </div>
         <div class="flex-item2">
-            <!-- <p id="heading"><b>Dashboard</b></p> -->
             <div id="text1">&lt; &nbsp; Back to Dashboard</div>
           <div class="tabs">
                 <tab-navigation [tabs]="menus1"></tab-navigation>
@@ -15,7 +14,7 @@
             <div class="main-flex">
                 <div class="chart0">
                     <div class="bpGraph">
-                        <!-- <bp-graph></bp-graph> -->
+                        <bp-graph></bp-graph>
                     </div>
 
                     <div class="inner-flex">
@@ -41,10 +40,10 @@
 
                 <div class="chart1">
                     <div class="pulseRate">
-                        <!-- <pulse-line-graph></pulse-line-graph> -->
+                        <pulse-line-graph></pulse-line-graph>
                     </div>
                     <div class="bmiGraph">
-                        <!-- <bmi-line-graph></bmi-line-graph> -->
+                        <bmi-line-graph></bmi-line-graph>
                     </div>
 
                 </div>
