--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div id="nav">
-        <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
+        <app-navbar [button]="false" [name]="'Dr Amit Tiwari'"></app-navbar>
     </div>
     <div class="subcontainer">
         <div class="flex-item1">
@@ -12,7 +12,7 @@
                     <div id="text1"><a routerLink="/doctor-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
                     <div id="patient-id">
                         <app-input [ipConfig]="searchPatientId"></app-input>
-                       <a [routerLink]="'/doctor/patient/medical-data'"><img src="assets/images/search.png"></a>
+                       <a [routerLink]="'/doc-patient-dashboard'"><img src="assets/images/search.png"></a>
                         </div>
                 </div>
                 <div class="inner-flex">
